# smf

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.ccls-cache/@@home@vndx@code@smf/: @usr@include@gentoo@fortify.h.blob  @usr@include@gentoo@maybe-stddefs.h.blob  @usr@include@stdc-predef.h.blob
.ccls-cache/@home@vndx@code@smf/: native@dev_vndx_bindings_NativeKt.h  native@dev_vndx_bindings_NativeKt.h.blob
native/: Cargo.toml  build.gradle  dev_vndx_bindings_NativeKt.h
native/src/: config.rs  error.rs  font.rs  java.rs  lib.rs  packing.rs  textures.rs
src/main/java/dev/vndx/init/: AutoDiscoveryMixinPlugin.java
src/main/kotlin/dev/vndx/: ExampleMod.kt  SMF.kt  Test.kt
src/main/kotlin/dev/vndx/bindings/: LibraryLoading.kt  Native.kt  NativeException.kt
src/main/kotlin/dev/vndx/mixin/: MixinGuiMainMenu.java
src/main/kotlin/dev/vndx/utils/: GLExtra.kt
src/main/resources/: mcmod.info
src/main/resources/assets/shaders/: basic.frag  basic.vert
